<?xml version="1.0"?>
<package format="2">.
  <name>socketcan_msgs</name>
  <version>0.8.5</version>
  <description>socketcan related message types.</description>

  <maintainer email="sweunwave@knu.ac.kr">sweunwave</maintainer>
  <author email="sweunwave@knu.ac.kr">sweunwave</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

</package>
